# so-challenge

./: README.md  pyproject.toml
diary/: 001-project-setup.md  002-sede-selection.md
src/so_challenge/: data_fetcher.py  milestones.py  plotter.py
tests/: test_data_fetcher.py  test_milestones.py  test_plotter.py
